<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/addEditExpenseFragment"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_expense" />

    <item
        android:id="@+id/expenseHistoryFragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/history" />

    <item
        android:id="@+id/reportsFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/reports" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />

</menu>
